# cloudstore-rs

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cloudstore.proto
src/: lib.rs
